--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,9 +4,10 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8"/>
-    <application android:label="@string/app_name">
+    <application android:theme="@android:style/Theme.Black.NoTitleBar">
         <activity android:name="MainActivity"
-                  android:label="@string/app_name">
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
