--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,7 +4,11 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="8"/>
-    <application android:theme="@android:style/Theme.Black.NoTitleBar">
+    <application
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:icon="@drawable/ic_icon"
+            android:label="@string/app_name"
+            >
         <activity android:name="MainActivity"
                   android:configChanges="keyboardHidden|orientation"
                   android:screenOrientation="portrait">
