add filter to words number textview

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.alperovichsimon"
           android:versionCode="1"
-          android:versionName="1.0">
+          android:versionName="1.0"
+          android:installLocation="preferExternal">
     <uses-sdk android:minSdkVersion="8"/>
     <application
             android:theme="@android:style/Theme.Black.NoTitleBar"
