--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,8 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="WordsActivity">
+        <activity android:name="WordsActivity"/>
+        <activity android:name=".GameActivity">
 
         </activity>
     </application>
