--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,9 +18,20 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name="WordsActivity"/>
-        <activity android:name=".GameActivity">
-
+        <activity android:name="WordsActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait">
         </activity>
+        <activity android:name="GameActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait">
+        </activity>
+        <activity android:name="StatsActivity"
+                  android:configChanges="keyboardHidden|orientation"
+                  android:screenOrientation="portrait">
+        </activity>
+
+
+
     </application>
 </manifest> 
